Changes for 1.3.1.0
* Created the placement logic for canProduceXUnits, which now works properly. (veqryn)

* Fixed display error where units with unit damage were not having their damage amount displayed. Still some bugs though for groups of units. (veqryn)

* Created new unit attachment, canDieFromReachingMaxDamage, which will cause a unit to die if they reach max damage through strat bombing or rockets. (veqryn)

* Fixed bug in triggers that caused unit production damage to be done to a territory if a factory was placed via triggers. (veqryn)

* Allowed rockets to also damage a unit, rather than a territory.  Further work on getting unit damage to work and display properly. (veqryn)

* Made disabled units actually work. (veqryn)

* Fixed bugs introduced into Strategic Bombing. (veqryn)

* Created new global property, "Damage From Bombing Done To Units Instead Of Territories", which when ON will have damage be done to units rather than territories, as territory damage was the old way of doing things. 
  In order for this to work, you must have "SBR Affects Unit Production" turned OFF, as that is the trigger for per territory damage. (veqryn)

* Created "canProduceXUnits" unit attachment. Set to "-1" if you want to produce the value of the territory the unit is in. Still working on the code for this. (veqryn)

* Removed "isCombatInfrastructure" and "unitDamage" from unit attachments, and also removed m_maxOperationalDamage from TripleAUnits. Unit damage is per unit, not per unit type, so it should never be a unit attachment. (veqryn)

* Stopped both Moore AI and Easy AI from buying any units that have maxBuildRestrictions. (veqryn)

* Added lobby rules web page to list of web pages available from the new help menu in the lobby screen. (veqryn)

* Fixed null pointer in unit drawer. (veqryn)

* Fix for Moore AI, it was choosing to never ever attack neutrals in some situations, even if they blocked the path towards the enemy. (veqryn)
