@@ -650,6 +650,21 @@ public class BattleTracker implements java.io.Serializable
         	}
         }
         
+        //destroy any disabled units owned by the enemy that are NOT infrastructure or factories
+        if(true)
+        {
+        	CompositeMatch<Unit> enemyToBeDestroyed = new CompositeMatchAnd<Unit>(Matches.enemyUnit(id, data), Matches.UnitIsDisabledShort(), Matches.UnitIsInfrastructure.invert(), Matches.UnitIsFactory.invert());
+        	Collection<Unit> destroyed = territory.getUnits().getMatches(enemyToBeDestroyed);
+            if (!destroyed.isEmpty())
+            {
+                Change destroyUnits = ChangeFactory.removeUnits(territory, destroyed);
+                bridge.getHistoryWriter().addChildToEvent(id.getName() + " destroys some disabled combat units", destroyed);
+                bridge.addChange(destroyUnits);
+                if (changeTracker != null)
+                    changeTracker.addChange(destroyUnits);
+            }
+        }
+        
         //take over non combatants
         CompositeMatch<Unit> enemyCapturable = new CompositeMatchOr<Unit>(Matches.UnitIsAAOrFactory, Matches.UnitIsInfrastructure); // UnitIsAAOrIsFactoryOrIsInfrastructure
         CompositeMatch<Unit> enemyNonCom = new CompositeMatchAnd<Unit>(Matches.enemyUnit(id, data), enemyCapturable);
